--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,6 +1,11 @@
+@import './common.less';
+@import './root.less';
+@import './albums.less';
+@import './album.less';
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: salmon;
+  background-color: @bgColor;
 }
